Fix double arrow on Safari

--- a/src/shared/components/details.css
+++ b/src/shared/components/details.css
@@ -22,6 +22,10 @@
 		cursor: pointer;
 		list-style: none;
 
+		&::-webkit-details-marker {
+			display: none;
+		}
+
 		&::before {
 			content: '▶';
 			display: inline-block;
